# PowerBIMentorAI

./: .gitignore  LICENSE  README.md  main.py  old.py  pyproject.toml  requirements.txt
PowerBIMentor/: __init__.py  core.py
PowerBIMentor/models/: __init__.py  gemini.py  model.py
PowerBIMentor/utils/: __init__.py  checker.py  extractor.py  processor.py
src/dir/: checker.py
src/models/: gemini.py  model.py  vertex.py
src/processors/: processor.py
tests/: test.py
tests/files/: schema.json  test_visual.py
tests/files/lesson-7/: Lesson - 7.pbit
tests/files/lesson-8/: Lesson - 8.pbit
tests/files/lesson-9/: Lesson-9.pbit  answer.txt
tests/models/: gemini.py  vertex.py
tests/processors/: processor.py
